Update: company information.

--- a/src/pages/cotizacion.astro
+++ b/src/pages/cotizacion.astro
@@ -75,13 +75,13 @@
     <div class="cotizacion-container">
         <div class="cabecera-cotizacion">
             <div class="logo-empresa">
-                <img src="https://edenmendez.com/wp-content/uploads/2024/10/Eden-Mendez_preview_rev_2.png" alt="Logo de la empresa" style="height:60px;">
+                <img src="/logo_sio.webp" alt="Logo de la empresa" style="height:60px;">
             </div>
             <div class="titulo-cotizacion">
                 <h2>Cotización</h2>
             </div>
             <div class="info-empresa">
-                <p>ventas@edenmendez.com</p>
+                <p>ventas@sionline.com.mx</p>
                 <p>624-166-5588</p>
                 <p>Country del Mar, San Jose del Cabo, <br> Baja California Sur, México</p>
             </div>
